debug endpoints e doc
